fix: scaling background image on mobile

--- a/src/components/UI/Background/Background.module.scss
+++ b/src/components/UI/Background/Background.module.scss
@@ -2,11 +2,6 @@
 
 .container {
   position: relative;
-
-  // width: 100%;
-  // height: min-content;
-  // -webkit-clip-path: inset(0 0 0 0);
-  // clip-path: inset(0 0 0 0);
 }
 
 .imageWrapper {
@@ -36,13 +31,7 @@
   width: 100%;
   height: 100%;
 
-  background-position: center;
+  background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-@media (max-width: $laptop) {
-  .bg {
-    background-size: 1400px auto;
-  }
 }
